Completed the FE. About to start the animation usng vanilla javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="card">
                 <div class="headshot">
                     <div class="circle"></div>
-                    <img src="hot-cake.jpeg" alt="Headshot">
+                    <img src="adidas3.jpg" alt="Headshot">
                 </div>
                 <div class="info">
                     <h1>Confused Soul</h1>
@@ -25,11 +25,11 @@
                 <div class="sizes">
                     <button>32</button>
                     <button>36</button>
-                    <button>38</button>
+                    <button class="active">38</button>
                     <button>40</button>
                 </div>
                 <div class="ping">
-                    <h3>Ping Me</h3>
+                    <button>Ping Me</button>
                 </div>
             </div>
         </div>
